forget password functionality changed, inputs autocomplete off, options-account z-index bug fixed

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -49,6 +49,7 @@
     justify-content: flex-start;
     width: 5rem;
     background-color: white;
+    z-index:3;
     h1 {
         font-weight: 300;
         font-size: 0.8rem;
