--- a/src/app/make-order/make-order.component.less
+++ b/src/app/make-order/make-order.component.less
@@ -33,7 +33,7 @@
     justify-content: center;
     align-items: flex-start;
     p{
-        color: rgb(150, 3, 3);
+        color: black;
     }
 }
 .item-display{
